--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Data folder 
+uploaded_data/*
+!uploaded_data/.gitkeep
+
+# Embedding folder 
+embedding/*
+!embedding/.gitkeep
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
